Fix spacing for username;

--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -24,7 +24,7 @@
   position: relative;
   padding: 8px 12px;
   background: #fff;
-  margin: 0;
+  margin-left: 5px;
   height: 36px;
   line-height: 20px;
   width:50%;
@@ -87,6 +87,7 @@
   flex-direction: column;
   align-items: flex-end;
   margin-right: 10px;
+  margin-left: 15px;
 }
 
 .logout-button {
@@ -99,6 +100,7 @@
   font-size: 12px;
   font-weight: bold;
   margin-top: 3px;
+  margin-left: 15px;
 }
 
 .logout-button:hover {
